# Active_Suspension_System

./: .gitignore  CMakeLists.txt  README.md  doc.md  documentation.md  main.c  resources.md  suspension_discrete_model.m
common/: CMakeLists.txt  PID.c  PID.h  accelerometer_manager.c  gyro_manager.h  matrix_lib.c  matrix_lib.h  signals_handler.c  signals_handler.h  system_init.c  system_init.h  system_process.c  system_process.h  system_utility.c  system_utility.h
control/: CMakeLists.txt  control.c  control.h
gui/: CMakeLists.txt  gui.c  gui.h  gui_plot.py  tempCodeRunnerFile.c
lib/: CMakeLists.txt  accelerometer_manager.c  accelerometer_manager.h  auto_model.c  auto_model.h  gyro_manager.c
model_simulation/: CMakeLists.txt  model_simulation.c  model_simulation.h
resources/: resources.md
sensors/: CMakeLists.txt  sensors.c  sensors.h
