include_directories(${automatic_suspension_system_SOURCE_DIR}/gui
                    ${automatic_suspension_system_SOURCE_DIR}/control
                    ${automatic_suspension_system_SOURCE_DIR}/common
                    ${automatic_suspension_system_SOURCE_DIR}/sensors)

add_library(model_simulation model_simulation)