include_directories(${automatic_suspension_system_SOURCE_DIR}/common
                    ${automatic_suspension_system_SOURCE_DIR}/control
                    ${automatic_suspension_system_SOURCE_DIR}/model_simulation
                    ${automatic_suspension_system_SOURCE_DIR}/gui)

add_library(sensors sensors)